<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelBaseActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/quote_of_the_day"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="150dp"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:padding="20dp"
        android:textColor="@color/text"/>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_above="@id/quote_input"
        android:layout_marginStart="90dp"
        android:padding="10dp"
        android:text="@string/back"
        android:textSize="16sp"
        android:backgroundTint="@color/button"
        android:textColor="@color/button_text"
        />
    <Button
        android:id="@+id/next_btn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_above="@id/quote_input"
        android:layout_marginStart="210dp"
        android:text="@string/next"
        android:textSize="16sp"
        android:backgroundTint="@color/button"
        android:textColor="@color/button_text"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/quote_input"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/write_a_quote"
        android:textColor="@color/button"
        android:backgroundTint="@color/button"
        android:textColorHint="@color/button_text"
        android:layout_above="@+id/add_btn"/>
    <Button
        android:id="@+id/add_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/add_a_quote"
        android:textSize="20sp"
        android:backgroundTint="@color/button"
        android:textColor="@color/button_text"
        />

</RelativeLayout>